# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 River Wang
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-signal-processing"
description = "Sensor Signal Processing Utilities For CircuitPythonS"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "River Wang", email = "urfdvw@gmail.com"}
]
urls = {Homepage = "https://github.com/urfdvw/CircuitPython_Signal_Processing"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "signal_processing",
    "CircuitPython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["signal_processing"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
